module/_archive/former_runtime/tests/former/all/wtools_vector_without_parameter.stderr
error: Expects at least one parameter here:
         Vec < >
  --> tests/former/all/wtools_vector_without_parameter.rs:10:24
   |
10 |   pub string_slice_1 : Vec<>,
   |                        ^^^^^
